# SMART

./: .gitignore  Dockerfile  MANIFEST.in  README.md  cliff.toml  color_seg.py  plantit.yaml  plantit_pipeline.sh  pyproject.toml  setup.cfg  setup.py  smart_release.py
.github/workflows/: ci.yml  release.yml
core/: color_seg.py  luminous_detection.py  marker_roi_crop.py  pipeline.py  process.py  trait_extract_gray.py  trait_extract_parallel.py  trait_extract_parallel_color.py  trait_extract_parallel_demo.py  trait_extract_parallel_ori.py
core/color_analysis/: trait_extract_parallel_color.py
core/color_segmentation/: color_seg.py  color_seg_pi.py  demo_color_seg_pi_val.py
core/marker_segmentation/: mutiple_object_segmentation.py
core/trait_computation/: demo_trait_extract_parallel.py  demo_trait_extract_parallel_val.py  thresholding.py  trait_extract_parallel.py  trait_extract_parallel_demo_old.py
dev_code/: demo_color_seg.py
sample_test/: readme.txt
sample_test/results/: trait.xlsx
scripts/: lint.py  update_version.py
smart/: models.py  plot.py  threshold.py
smart/color_segmentation/: color_kmeans_vis.py  color_seg.py
smart/tests/: test_threshold.py
smart/trait_computation/: demo_trait_extract_parallel.py  demo_trait_extract_parallel_val.py  trait_extract_parallel.py  trait_extract_parallel_demo.py  trait_extract_parallel_mi.py  trait_extract_parallel_ori.py
tools/: color_cluster_cv.py  color_kmeans_vis.py  color_seg.py  curvature.py  superpixel.py  utils.py  watershed_cv.py
