[metadata]
name = smart-arabidopsis-traits
version = file: version.txt
description= Extract geometric traits from top-view images of plants
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Suxing Liu
author_email = suxing.liu@uga.edu
maintainer = Suxing Liu
maintainer_email = suxing.liu@uga.edu
license = BSD-3-Clause
license_files = LICENSE
platform = Windows, Mac OS-X, Linux
keywords = plant, image, trait, geometric, segmentation, analysis, phenotype
classifiers =
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
url = https://github.com/Computational-Plant-Science/SMART
download_url = https://pypi.org/project/smart-arabidopsis-traits
project_urls =
    Bug Tracker = https://github.com/Computational-Plant-Science/SMART/issues
    Source Code = https://github.com/Computational-Plant-Science/SMART

[options]
include_package_data = True
zip_safe = True
packages = find:
python_requires = >=3.8
install_requires =
    click
    psutil
    numpy
    numba
    pandas
    networkx
    skan
    tabulate
    imutils
    python-magic
    seaborn
    openpyxl
    opencv-python
    matplotlib
    scikit-learn
    scikit-image
    scikit-build
    scipy
    Pillow==9.0.1
    mayavi
    progressbar
    moviepy

[options.extras_require]
lint =
    black
    flake8
    isort
    pylint
test =
    %(lint)s
    flaky
    filelock
    pytest-dotenv
    pytest-xdist

[options.entry_points]
console_scripts =
    smart = smart_arabidopsis_traits.cli:main

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
ignore =
# https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401 # 'module' imported but unused
# https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E121 # continuation line under-indented for hanging indent
    E122 # continuation line missing indentation or outdented
    E126 # continuation line over-indented for hanging indent
    E127 # continuation line over-indented for visual indent
    E128 # continuation line under-indented for visual indent
    E203 # whitespace before
    E221 # multiple spaces before operator
    E222 # multiple spaces after operator
    E226 # missing whitespace around arithmetic operator
    E231 # missing whitespace after ','
    E241 # multiple spaces after ','
    E402 # module level import not at top of file
    E501 # line too long (> 79 characters)
    E502 # backslash is redundant between brackets
    E722 # do not use bare 'except'
    E741 # ambiguous variable name
    W291 # trailing whitespace
    W292 # no newline at end of file
    W293 # blank line contains whitespace
    W391 # blank line at end of file
    W503 # line break before binary operator
    W504 # line break after binary operator
statistics = True